src/snapshots/afrotd__parser__tests__interpretation_html_3.1.3_12.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.1.3.XII
        </p>
    </div>
    <div class="message-body">
        <p>
            Während der ersten Serie in einer Extraperiode wirft A12 einen
            Vorwärtspass und Team A verursacht einen illegalen Shift. B25 fängt
            den Pass ab und B38 (a) clippt oder (b) verursacht ein schweres
            persönliches Foul, bevor B25 Team A’s Goalline überquert.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Punkte zählen nicht. Die Fouls heben sich auf und der Down
                wird nicht wiederholt. Team A’s Ballbesitz-Serie ist beendet
                und (a) Team B beginnt seine Ballbesitz-Serie an der
                25-Meterlinie. (b) B38 wird disqualifiziert und Team B beginnt
                seine Ballbesitz-Serie an der 40-Meterlinie.
            </p>
        </details>
    </div>
</article>
