src/snapshots/afrotd__parser__tests__interpretation_html_3.1.3_14.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.1.3.XIV
        </p>
    </div>
    <div class="message-body">
        <p>
            Während der ersten Ballbesitz-Serie fängt B37 einen Pass ab und hat
            freien Weg zur Goalline, als er obszöne Gesten in Richtung des
            nächsten, ihn verfolgenden Gegners macht.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B’s Punkte werden annulliert und die Strafe wird
                übertragen. Team B startet seine Serie an der 40-Meterlinie,
                First Down und 10 (Regeln 3.1.3 und 3.1.3.g.1 und 3.1.3.g.2).
            </p>
        </details>
    </div>
</article>
