src/snapshots/afrotd__parser__tests__interpretation_html_3.1.3_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.1.3.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Während der ersten Ballbesitz-Serie einer Extraperiode fängt Team B
            einen Pass ab oder recovert oder fängt einen Fumble oder einen
            Rückpass ab und erzielt keinen Touchdown.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A’s Ballbesitz-Serie ist beendet und Team B beginnt seine
                Ballbesitz-Serie. Team B wird zu Team A, wenn der Referee den
                Ball für spielbereit erklärt.
            </p>
        </details>
    </div>
</article>
