src/snapshots/afrotd__parser__tests__interpretation_html_3.1.3_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.1.3.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Während der ersten Ballbesitz-Serie einer Extraperiode versucht
            Team A, ein Fieldgoal zu erzielen. Der Kick wird abgeblockt und
            überquert nicht die neutrale Zone. Team A recovert den Ball und
            advanct zu einem Touchdown.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Sechs Punkte für Team A. Team B beginnt seine Ballbesitz-Serie
                nach dem Try.
            </p>
        </details>
    </div>
</article>
