src/snapshots/afrotd__parser__tests__interpretation_html_3.2.3_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.2.3.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Während der Verlängerung einer Periode, nachdem der Ball
            freigegeben wurde und vor dem Snap begeht Team A ein Foul.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Dead Ball Foul. Team A wird für das Foul bestraft und ist
                berechtigt, den Down zu beenden.
            </p>
        </details>
    </div>
</article>
