src/snapshots/afrotd__parser__tests__interpretation_html_3.2.3_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.2.3.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Während eines Fieldgoalversuchs läuft die Spielzeit am Ende der
            zweiten Spielperiode aus. Team B war Offside.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 5 Meter vom Previous Spot, die Periode wird verlängert
                (Regel 10.2.2.d.4.a)
            </p>
        </details>
    </div>
</article>
