src/snapshots/afrotd__parser__tests__interpretation_html_3.2.4_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.2.4.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem der Ball nach einem Laufspiel im Aus dead wurde, wird die
            40-Sekunden-Uhr gestartet. Der Umpire erhält einen Ball vom
            Linejudge, und als er diesen auf den Boden legt, stellt er fest,
            dass es sich dabei um einen von der B-Bällen handelt. Er wirft den
            Ball zum Linejudge, der versucht, einen Team A-Ball von einem
            Balljungen zu erhalten.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Wenn die Play Clock „25“ oder weniger Sekunden anzeigt, bevor
                der korrekte Ball von der Seitenlinie hereingebracht werden
                kann und spielbereit ist, versucht der Referee die Play Clock
                zurückzusetzen, ohne die Game Clock zu stoppen. Wenn die Play
                Clock nicht schnell zurückgesetzt werden kann, nimmt der
                Referee ein Timeout, lässt die Play Clock auf 25 Sekunden
                setzen und gibt den Ball frei. Die Game Clock startet mit dem
                Snap, es sei denn, sie lief, als der Referee das Timeout nahm.
            </p>
        </details>
    </div>
</article>
