src/snapshots/afrotd__parser__tests__interpretation_html_3.3.10_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.10.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem der Ball dead ist, blockt A55 B33 gegen dessen Taille und
            dadurch zu Boden. Als B33 mit dem Kopf auf den Boden prallt,
            verliert er den Helm.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Dead Ball Foul. 15-Meterstrafe vom Succeeding Spot. B33 muss
                das Spiel für einen Down verlassen, da sein Helm durch das
                Spielgeschehen und nicht durch ein Helmfoul verloren wurde. B33
                kann im Spiel bleiben, wenn Team B ein Timeout nimmt.
            </p>
        </details>
    </div>
</article>
